2009-12-18  Sebastien Pouliot  <sebastien@ximian.com>

	* usercontrol.cpp: Don't let NULL (old / new) values fall into
	Element[Added|Removed]

2009-12-17  Alan McGovern  <amcgovern@novell.com>

	* style.h:
	* style.cpp:
	* provider.h:
	* control.cpp:
	* provider.cpp:
	* dependencyobject.cpp:
	* frameworkelement.cpp: Propagate errors back when applying
	  (invalid) templates.

2009-12-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xap.cpp: Print error messages to the terminal if there is a
	failure unxapping.

	* deployment.cpp|h: Remove UntrackPath, not used anymore.

	* application.cpp: Don't delete temp directories in the dtor,
	when we have a splash screen and a xap, two applications are
	created, and the xap contents are unzipped into the first
	application (since the second application is created when the
	assemblies in the xap have been loaded) - deleting temp files
	in application's dtor would cause the first application to delete
	all the xap contents. The deployment shutdown code will still
	delete it all.

2009-12-16  Jeffrey Stedfast  <fejj@novell.com>

	* runtime.cpp (Surface): Init some new state variables for
	enabling framerate counter and redraw regions.
	(GetEnableFrameRateCounter): New method to get whether or not we
	should call the FPS callback. Checks both the global
	moonlight_flags as well as the surface-specific state.
	(GetEnableRedrawRegions): New method to decide if we should show
	exposed regions. Checks both the global moonlight_flags as well as
	the surface-specific state.
	(render_cb): Use GetEnableFrameRateCounter().
	(PaintToDrawable): Use GetEnableRedrawRegions() and modified to
	use similar colors to what Silverlight seems to use for this
	feature.

2009-12-16  Larry Ewing  <lewing@novell.com>

	* animation.cpp:  Fix the key frame easing functions to actually
	use the eased value.

2009-12-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: proxy_loaded_event: properly unref the
	RoutedEventArgs after using it.
